<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="172dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/oops"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/warning_move" />

        <TextView
            android:id="@+id/source_jorno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autoLink="web"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:linksClickable="true"
            android:text="@string/source_jorno"
            android:textAlignment="textEnd"
            android:textColor="#3F51B5" />


        <ImageView
            android:id="@+id/oops_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/oops"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="end"
                android:textSize="24sp" />

            <Button
                android:id="@+id/return_button"
                android:text="@string/return_sub"
                android:textSize="5sp"
                android:visibility="invisible"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>